--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,36 +9,93 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="martinmatko.anatomy.AboutActivity">
 
-    <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/aboutus"
+                android:paddingTop="5sp" />
 
-        <TextView
+            <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                ext:documentView_antialias="true"
+                ext:documentView_cacheConfig="auto_quality"
+                ext:documentView_maxLines="100"
+                ext:documentView_reverse="false"
+                ext:documentView_text="@string/aboutustext"
+                ext:documentView_textAlignment="justified"
+                ext:documentView_textColor="@color/grey_700"
+                ext:documentView_textFormat="plain"
+                ext:documentView_textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/mission"
+                android:paddingTop="5sp"/>
+
+            <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                ext:documentView_antialias="true"
+                ext:documentView_cacheConfig="auto_quality"
+                ext:documentView_maxLines="100"
+                ext:documentView_reverse="false"
+                ext:documentView_text="@string/missionText"
+                ext:documentView_textAlignment="justified"
+                ext:documentView_textColor="@color/grey_700"
+                ext:documentView_textFormat="plain"
+                ext:documentView_textSize="15sp" />
+
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/aboutus"
-            android:id="@+id/textView2" />
+            android:text="@string/development"
+            android:paddingTop="5sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/aboutustext"
-            android:id="@+id/textView3" />
+            <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                ext:documentView_antialias="true"
+                ext:documentView_cacheConfig="auto_quality"
+                ext:documentView_maxLines="100"
+                ext:documentView_reverse="false"
+                ext:documentView_text="@string/developmentText"
+                ext:documentView_textAlignment="justified"
+                ext:documentView_textColor="@color/grey_700"
+                ext:documentView_textFormat="plain"
+                ext:documentView_textSize="15sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/mission"
-            android:id="@+id/textView4" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/privacy"
+                android:paddingTop="5sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/missionText"
-            android:id="@+id/textView5" />
-    </LinearLayout>
+            <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                ext:documentView_antialias="true"
+                ext:documentView_cacheConfig="auto_quality"
+                ext:documentView_maxLines="100"
+                ext:documentView_reverse="false"
+                ext:documentView_text="@string/privacyText"
+                ext:documentView_textAlignment="justified"
+                ext:documentView_textColor="@color/grey_700"
+                ext:documentView_textFormat="plain"
+                ext:documentView_textSize="15sp" />
+            </LinearLayout>
+        </ScrollView>
+
 </RelativeLayout>
