--- a/app/src/main/res/layout/organsystems.xml
+++ b/app/src/main/res/layout/organsystems.xml
@@ -19,7 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal">
-            <TableRow>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
@@ -35,7 +37,7 @@
                             android:tag="06" />
                         <TextView
                             style="@style/imageTileLabel"
-                            android:text="@string/s06"
+                            android:text="@string/s10"
                             android:tag="06"/>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -54,7 +56,7 @@
                             android:tag="06" />
                         <TextView
                             style="@style/imageTileLabel"
-                            android:text="@string/s06"
+                            android:text="neck"
                             android:tag="06"/>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
