--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,8 @@
         <item name="android:textColor">@color/white</item>
     </style>
     <style name="imageTileButton">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:background">@color/gray</item>
@@ -28,8 +28,10 @@
 
     <style name="imageTileLabel">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:scaleType">fitCenter</item>
+        <item name="android:padding">5sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textAppearance">?android:attr/textAppearanceListItem</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@color/white</item>
@@ -38,7 +40,7 @@
 
     <style name="cardView">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_weight">1</item>
     </style>
