Setting language in test, splitting menu and test to two activities, starting with registration
Setting language in test, splitting menu and test to two activities,
starting with registration, code reformatting

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,6 +92,16 @@
                 android:textStyle="bold"
                 android:backgroundTint="#428BCA"
                 android:onClick="onFacebookClicked"/>
+
+            <Button
+                android:id="@+id/signup"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:text="@string/signup"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:textStyle="bold"
+                android:onClick="signUpClicked" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
