--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/action_a"
-            android:onClick="setCategoriesMenu"
+            android:onClick="goToMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             fab:fab_colorNormal="@color/white"
