--- a/app/src/main/res/layout/bodyorgans.xml
+++ b/app/src/main/res/layout/bodyorgans.xml
@@ -2,19 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="wrap_content"
     tools:context="martinmatko.myapplication.MainActivity$PlaceholderFragment">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/scrollView"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0.13">
+        android:layout_weight="0.13"
+        card_view:layout_behavior="@string/appbar_scrolling_view_behavior">
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -36,286 +33,6 @@
                         <TextView
                             style="@style/imageTileLabel"
                             android:text="@string/s10"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
-                            android:tag="06"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </TableRow>
-            <TableRow>
-                <android.support.v7.widget.CardView
-                    style="@style/cardView"
-                    card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardUseCompatPadding="true">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <ImageButton
-                            style="@style/imageTileButton"
-                            android:src="@drawable/s06"
-                            android:tag="06" />
-                        <TextView
-                            style="@style/imageTileLabel"
-                            android:text="@string/s06"
                             android:tag="06"/>
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
