--- a/app/src/main/res/layout/organsystems.xml
+++ b/app/src/main/res/layout/organsystems.xml
@@ -2,16 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
     tools:context="martinmatko.myapplication.MainActivity$PlaceholderFragment">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
         android:id="@+id/scrollView"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.13">
