--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
             android:id="@+id/captionView"
             android:textColor="#fffaffff"
             android:background="?attr/colorPrimary"
-            android:gravity="center"
+            android:textAlignment="viewStart"
+            android:gravity="start"
             android:clickable="true"
             android:onClick="onCaptionClick"
             android:focusable="true"
