--- a/app/src/main/res/layout/bodyorgans.xml
+++ b/app/src/main/res/layout/bodyorgans.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="5sp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="martinmatko.myapplication.MainActivity$PlaceholderFragment">
 
@@ -21,7 +22,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -39,7 +40,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -59,7 +60,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -77,7 +78,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -97,7 +98,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -115,7 +116,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -135,7 +136,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -153,7 +154,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -173,7 +174,7 @@
                 <android.support.v7.widget.CardView
                     style="@style/cardView"
                     card_view:cardElevation="5dp"
-                    card_view:cardCornerRadius="4dp"
+                    card_view:cardCornerRadius="2dp"
                     card_view:cardUseCompatPadding="true">
                     <LinearLayout
                         android:layout_width="match_parent"
