--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
@@ -116,34 +116,33 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        fab:fab_addButtonColorNormal="@color/button"
-        fab:fab_addButtonColorPressed="@color/white"
-        fab:fab_addButtonPlusIconColor="@color/black"
-        fab:fab_labelStyle="@style/menu_labels_style"
+        app:fab_addButtonColorNormal="@color/app_primary"
+        app:fab_addButtonColorPressed="@color/app_primary_dark"
+        app:fab_addButtonPlusIconColor="@color/white"
+        app:fab_labelStyle="@style/menu_labels_style"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:visibility="gone"
         android:layout_alignParentLeft="true">
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_b"
+            android:onClick="onTestClicked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorPressed="@color/app_primary_dark"
+            app:fab_colorNormal="@color/app_primary"
+            app:fab_title="@string/continuePracticing"
+            app:fab_icon="@drawable/play"/>
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/action_a"
             android:onClick="goToMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_title="Vybrat kapitolu"
-            fab:fab_colorPressed="@color/white_pressed"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/action_b"
-            android:onClick="onTestClicked"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_title="@string/startCategoriesTest"
-            fab:fab_colorPressed="@color/white_pressed"/>
-
+            app:fab_title="@string/selectChapter"
+            app:fab_colorPressed="@color/app_primary_dark"
+            app:fab_colorNormal="@color/app_primary"/>
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
