--- a/app/src/main/res/values/Colors.xml
+++ b/app/src/main/res/values/Colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="app_primary">#4caf50</color>
+    <color name="app_primary">#42bd41</color>
     <color name="app_primary_dark">#2e7d32</color>
 	<color name="white">#FFFFFFFF</color>
     <color name="blue">#1d71b9</color>
